[package]
name = "key_set"
version = "0.1.0"
authors = ["Eduardo Turiño <eturino@eturino.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eturino/key-set.rs/"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.60"
